[package]
name = "metaplex-das-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", optional = true, features = ["cargo"] }
governor = "0.6.0" 
reqwest = { version="0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.35.1", optional = true, features = ["full"] }

[features]
cli = ["clap", "tokio"]
